--- a/web/src/components/blog-post-preview-grid.module.css
+++ b/web/src/components/blog-post-preview-grid.module.css
@@ -6,7 +6,7 @@
 }
 
 .headline {
-  font-size: var(--font-micro-size);
+  font-size: 5rem;
   line-height: var(--font-micro-line-height);
   font-weight: 600;
   text-transform: uppercase;
