--- a/web/src/components/blog-post-preview.module.css
+++ b/web/src/components/blog-post-preview.module.css
@@ -5,6 +5,7 @@
   display: block;
   color: inherit;
   text-decoration: none;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .inList {
@@ -37,7 +38,7 @@
 }
 
 .text {
-  /* empty */
+  padding: 1rem 2rem 2rem 2rem;
 }
 
 .title {
@@ -57,6 +58,7 @@
 .excerpt {
   @nest & p {
     margin: 0.5em 0;
+    font-style: italic;
   }
 
   @nest & strong {
