--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -6,7 +6,7 @@
 }
 
 .headline {
-  font-size: var(--font-micro-size);
+  font-size: var(--font-small-size);
   line-height: var(--font-micro-line-height);
   font-weight: 600;
   text-transform: uppercase;
@@ -19,10 +19,22 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-column-gap: 2em;
   grid-row-gap: 2em;
 }
+
+.list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column-gap: 2em;
+  grid-row-gap: 2em;
+  
+}
+
 
 .browseMoreNav {
   composes: small from './typography.module.css';
@@ -40,5 +52,15 @@
         color: var(--color-accent);
       }
     }
+  }
+}
+
+.view {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: .5rem;
+  cursor: pointer;
+  @nest &:last-of-type {
+    margin-right: 1rem;
   }
 }
