--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -11,7 +11,6 @@
   margin: 0 auto;
   max-width: 960px;
   padding: 1em;
-  display: flex;
 
   @media (--media-min-small) {
     padding: 1.5em 1.5em;
@@ -19,11 +18,11 @@
 }
 
 .branding {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
   font-weight: 600;
-  flex: 1;
-
   @nest & a {
-    display: inline-block;
     padding: 0.5em;
     color: inherit;
     text-decoration: none;
@@ -32,6 +31,23 @@
       @nest &:hover {
         color: var(--color-accent);
       }
+    }
+  }
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  font-weight: 600;
+   
+  @nest & li {
+    padding: 0 1rem;
+
+    @nest &:hover {
+      color: var(--color-accent);
     }
   }
 }
@@ -111,4 +127,8 @@
 
 .showNav {
   display: block;
+}
+
+.chaticon {
+  margin-left: 0.5rem;
 }
