--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -1,18 +1,25 @@
-@import "../styles/custom-media.css";
-@import "../styles/custom-properties.css";
+@import '../styles/custom-media.css';
+@import '../styles/custom-properties.css';
 
-.root {
-}
+.root {}
 
 .title {
-  composes: responsiveTitle1 from "./typography.module.css";
+  composes: responsiveTitle1 from './typography.module.css';
 }
 
 .mainImage {
-  display: flex;
-  justify-content:center;
+  display: block;
+  position: relative;
+  background: var(--color-very-light-gray);
+
 
   @nest & img {
+    display: block;
+    margin: auto;
+    width: 100%;
+    min-width: 100%;
+    height: 20rem;
+    vertical-align: top;
     object-fit: cover;
   }
 }
@@ -52,11 +59,14 @@
 }
 
 .metaContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .publishedAt {
-  composes: small from "./typography.module.css";
-  margin: 2rem 0 3rem;
+  composes: small from './typography.module.css';
   color: var(--color-gray);
 }
 
@@ -76,6 +86,6 @@
 }
 
 .categoriesHeadline {
-  composes: base from "./typography.module.css";
+  composes: base from './typography.module.css';
   margin: 0.5rem 0 0;
 }
