--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -12,7 +12,7 @@
 
 .footer {
   border-top: 1px solid var(--color-very-light-gray);
-  background-color: #6c757d;
+  background-color: #ffd8be;
 
   @nest & a {
     color: inherit;
