--- a/web/src/components/container.module.css
+++ b/web/src/components/container.module.css
@@ -1,4 +1,7 @@
 @import '../styles/custom-media.css';
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&family=Parisienne&family=Roboto:wght@100&display=swap');
 
 .root {
   box-sizing: border-box;
@@ -7,20 +10,32 @@
   margin: 0 auto;
 
   @nest & h2 {
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 100;
   }
 
   @nest & h1 {
-    font-family: 'Libre Baskerville', serif;
+    /* font-family: 'Libre Baskerville', serif; */
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 3rem;
+
+    @nest & span {
+      font-family: 'Bitter', serif;
+      padding: 0 0.9rem;
+      font-style: oblique;
+     
+    }
   }
+
+  
 
   @media (--media-min-small) {
     padding: 2em;
   }
 }
+
