--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -1,5 +1,5 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
   margin: 2em 0 4em;
@@ -15,13 +15,17 @@
 }
 
 .grid {
+  grid-template-columns: 1fr;
+  grid-column-gap: 2em;
+  grid-row-gap: 2em;
   margin: 0;
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 2em;
-  grid-row-gap: 2em;
+
+  @media (min-width: 649px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .list {
@@ -32,12 +36,10 @@
   grid-template-columns: 1fr;
   grid-column-gap: 2em;
   grid-row-gap: 2em;
-  
 }
 
-
 .browseMoreNav {
-  composes: small from './typography.module.css';
+  composes: small from "./typography.module.css";
   margin-top: 2rem;
   text-align: center;
 
@@ -56,11 +58,22 @@
 }
 
 .view {
-  display: flex;
-  justify-content: flex-end;
-  padding-bottom: .5rem;
-  cursor: pointer;
-  @nest &:last-of-type {
-    margin-right: 1rem;
+  display: none;
+  @media (min-width: 450px) {
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 0.5rem;
+
+    @nest &:last-of-type {
+      margin-right: 1rem;
+    }
+
+    @nest & > span {
+      cursor: pointer;
+
+      @nest &:last-of-type {
+        margin-left: 0.3rem;
+      }
+    }
   }
 }
