--- a/web/src/components/container.module.css
+++ b/web/src/components/container.module.css
@@ -1,7 +1,7 @@
-@import '../styles/custom-media.css';
-@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Parisienne&family=Roboto:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&family=Parisienne&family=Roboto:wght@100&display=swap');
+@import "../styles/custom-media.css";
+@import url("https://fonts.googleapis.com/css2?family=Parisienne&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Parisienne&family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@100&family=Parisienne&family=Roboto:wght@100&display=swap");
 
 .root {
   box-sizing: border-box;
@@ -10,7 +10,7 @@
   margin: 0 auto;
 
   @nest & h2 {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,24 +18,24 @@
   }
 
   @nest & h1 {
-    /* font-family: 'Libre Baskerville', serif; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
+    display: block;
 
+    @media (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3rem;
+    }
     @nest & span {
-      font-family: 'Bitter', serif;
-      padding: 0 0.9rem;
+      font-family: "Bitter", serif;
+      padding: 0 0.2rem;
       font-style: oblique;
-     
+
+      @media (min-width: 768px) {
+        font-family: "Bitter", serif;
+        padding: 0 0.9rem;
+        font-style: oblique;
+      }
     }
   }
-
-  
-
-  @media (--media-min-small) {
-    padding: 2em;
-  }
 }
-
