--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -24,7 +24,7 @@
   max-width: 100%;
   font-weight: 600;
   @nest & a {
-    /* padding: 0.5em; */
+    padding: 0.5em;
     color: inherit;
     text-decoration: none;
 
