--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -30,11 +30,15 @@
 .footerWrapper {
   box-sizing: border-box;
   max-width: 100%;
-  padding: 3em 1em 1.5em;
+  padding: 1em 1em 1.5em;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: 768px) {
+    padding: 3em 1em 1.5em;
+  }
 
   @nest & ul {
     display: flex;
@@ -49,6 +53,7 @@
     }
 
     
+   
 
     @nest & li {
       margin-right: 1rem;
@@ -60,7 +65,12 @@
         margin-left: 0.5rem;
         cursor: pointer;
       }
+
+      @nest & span {
+       
+      }
     }
+   
   }
 
   @media (--media-min-small) {
@@ -73,4 +83,16 @@
     color: #f72585;
     cursor: pointer;
   }
+}
+.line {
+  display: none;
+  color: red;
+
+  @nest & span {
+    display: none;
+
+    @media (min-width: 768px) {
+      display: block;
+    }
+   }
 }
