--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -36,7 +36,7 @@
   }
 }
 .about {
-  /* display: none; */
+  display: none;
 
   @media (min-width: 450px) {
     display: flex;
@@ -61,7 +61,7 @@
 }
 
 .list {
-  /* display: none; */
+  display: none;
 
   @media (min-width: 450px) {
     display: flex;
