--- a/web/src/pageStyles/about.module.css
+++ b/web/src/pageStyles/about.module.css
@@ -1,8 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@100&family=Parisienne&family=Roboto:wght@100&display=swap");
+
+
 .container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @nest & h1 {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+  }
 }
 
 .container__title {
@@ -16,6 +24,8 @@
   width: 80%;
 
   @media (min-width: 768px) {
-    width: 50%;
+    width: 30%;
   }
+
+ 
 }
